# Tools

./: .gitignore  LICENSE  README.md
CSprojectReferenceSwitchTool/: CSprojectReferenceSwitchTool.sln
CSprojectReferenceSwitchTool/CSprojectReferenceSwitchTool/: CSprojectReferenceSwitchTool.csproj  CsProjectFile.cs  DotnetHelper.cs  Program.cs  Runner.bat
ComputerControl/: README.md  install_service.bat  server.py  uninstall_service.bat
FileTools/: README_CN.md  archive_extractor.py  cleanup_patterns_example.json  file_cleanup.py  regex_cleanup.py  run_cleanup.bat  run_extractor.bat  run_regex_cleanup.bat  test_extractor.py  test_performance.py
GA_Audit/: .env  .env.example  .gitignore  README.md  ga-audit.sh  pyproject.toml  run.py  test.py  需求.md
GA_Audit/ga_audit/: __init__.py  auditor.py  config.py  converter.py  main.py
GA_Audit/人员名单/: 人员.md
GA_Audit/考核要求/: 考核.docx
InvalidPostfixCheckTool/: InvalidPostfixCheckTool.sln
InvalidPostfixCheckTool/InvalidPostfixCheckTool/: Program.cs  Run.bat
PortsScan/: PortsScan.sln
PortsScan/src/PortsScan/: PortsScan.xproj  Program.cs
PortsScan/src/PortsScan/Properties/: AssemblyInfo.cs
PortsScan/src/PortsScan/Properties/PublishProfiles/: Out-publish.ps1
ScanRepeatFiles/: ScanRepeatFiles.sln
ScanRepeatFiles/ScanRepeatFiles/: Program.cs  ScanRepeatFiles.csproj
Word2ExcelFixer/: CLAUDE.md  README.md  __main__.py  diagnose.py  example.py  pyproject.toml
Word2ExcelFixer/.claude/: settings.local.json
Word2ExcelFixer/word2excel_fixer/: __init__.py  cli.py  core.py
